--- a/views/login.html
+++ b/views/login.html
@@ -64,8 +64,7 @@
             <label class="visually-hidden" for="autoSizingInputGroup"></label>
 
             <div class="col-12 md-6 lg-4  d-grid gap-2 my-3 ">
-                <button class="btn btn-primary" type="button" href="/" >
-                    Enviar <span class=" btn btn-primary  badge bg-secondary"></span></button>
+               <a href="/"><button class="btn btn-primary" type="button" >Enviar </button><span class=" btn btn-primary  badge bg-secondary"></span></a>
                
               </div>
            
