tratando de acomodar las columnas del formulario con bootstrap no ewsta saliendo

--- a/views/registre.html
+++ b/views/registre.html
@@ -54,29 +54,29 @@
 
     <form  action="/login" method="">
         
-        <div class=" col-12 md-4 lg-4 form-control my-4">
+        <div class=" col- md-6 lg-4 form-control my-4">
             <label class="visually-hidden" for="autoSizingInputGroup">Ingrese su Nombre y Apellido</label>
             
-            <div class="input-group">
+            <div class="input-group ">
                 
                 <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Ingrese su Nombre y Apellido">
            
                 <label class="visually-hidden" for="autoSizingInputGroup">Nombre usuario</label>
                 <div class=" col-12 md-4 lg-4  input-group  my-4 " >
-                    <div class="input-group-text">@</div>
+                    <div class="input-group-text ">@</div>
                     <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Nombre usuario">
                 </div>
                 <label for="floatingInputInvalid"></label>
                 <label class="visually-hidden" for="autoSizingInputGroup">email</label>
-                <div class="col-12 md-4 lg-4  input-group">
-                    <div class="input-group-text"></div>
+                <div class=" col-6 md-6 lg-6 input-group">
+                    <div class="input-group-text "></div>
                     <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="email">
                 </div>
-                <div class="col-12 md-4 lg-4 " >
+                <div class="col-6 md-6 lg-6 " >
                     <h2>Fecha de nacimiento</h2>
                 </div>
                 <label class="visually-hidden" for="autoSizingInputGroup"></label>
-                <div class="col-12 md-4 lg-4   input-group my-4">
+                <div class="col-6 md-4 lg-4   input-group my-4">
                     <input type="date" class="form-control  " id="autoSizingInputGroup" placeholder="date">
                 </div>
                 <label class="visually-hidden" for="autoSizingInputGroup">domiocilio</label>
@@ -134,8 +134,8 @@
 
                 </div>
                 <label class="visually-hidden" for="autoSizingInputGroup"></label>
-                <div class="input-group">
-                    <div class="input-group-text"></div>
+                <div class=" row input-group">
+                    <div class="input-group-text col-12 md-4 lg-4 "></div>
                     <input type="password"  name="password" class="form-control" id="autoSizingInputGroup" placeholder="elegir contraseña">
                 </div>   
                 <label class="visually-hidden" for="autoSizingInputGroup"></label>
