--- a/views/login.html
+++ b/views/login.html
@@ -52,7 +52,7 @@
     <main class="main-productos">
         <div class="row " >  
         <from action="/login">
-            <div class="input-group">
+            <div class="input-group col-10 md-6 lg-4 mb-3 ">
                 <div class="col-10 md-6 lg-4 mb-3 justify-conten-center input-group my-3" >
                   
                     <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Nombre usuario">
