--- a/views/registre.html
+++ b/views/registre.html
@@ -54,7 +54,7 @@
 
     <form  action="/login" method="">
         
-        <div class=" col- md-6 lg-4 form-control my-4">
+        <div class=" col-12 col-md-6 col-lg-4 form-control my-4">
             <label class="visually-hidden" for="autoSizingInputGroup">Ingrese su Nombre y Apellido</label>
             
             <div class="input-group ">
@@ -62,30 +62,30 @@
                 <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Ingrese su Nombre y Apellido">
            
                 <label class="visually-hidden" for="autoSizingInputGroup">Nombre usuario</label>
-                <div class=" col-12 md-4 lg-4  input-group  my-4 " >
+                <div class=" col-12 col-md-4 col-lg-4  input-group  my-4 " >
                     <div class="input-group-text ">@</div>
                     <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Nombre usuario">
                 </div>
                 <label for="floatingInputInvalid"></label>
                 <label class="visually-hidden" for="autoSizingInputGroup">email</label>
-                <div class=" col-6 md-6 lg-6 input-group">
+                <div class=" col-12 col-md-6 col-lg-6 input-group">
                     <div class="input-group-text "></div>
                     <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="email">
                 </div>
-                <div class="col-6 md-6 lg-6 " >
+                <div class="col-6 col-md-6 col-lg-6 " >
                     <h2>Fecha de nacimiento</h2>
                 </div>
                 <label class="visually-hidden" for="autoSizingInputGroup"></label>
-                <div class="col-6 md-4 lg-4   input-group my-4">
+                <div class="col-6 col-md-4 col-g-4   input-group my-4">
                     <input type="date" class="form-control  " id="autoSizingInputGroup" placeholder="date">
                 </div>
                 <label class="visually-hidden" for="autoSizingInputGroup">domiocilio</label>
-                <div class=" col-12 md-4 lg-4 input-group my-4" >
+                <div class=" col-12 col-md-4 col-lg-4 input-group my-4" >
                     <div class="input-group-text"></div>
                     <input type="text" class="form-control  " id="autoSizingInputGroup" placeholder="domicilo">
                 </div>
                 <H2 class="col-12 font-size-base my-4"  "row" "">Perfil del usuario</H2>
-                <div  class = "col-6 sm-6 lg-4" > 
+                <div  class = "col-6 col-sm-6 col-lg-4" > 
                     <label for="comprador"></label>
                     <input type="radio" name="compra" value="si">comprador
                 </div>
