--- a/views/login.html
+++ b/views/login.html
@@ -53,20 +53,20 @@
         <div class="row " >  
         <from action="/login">
             <div class="input-group">
-                <div class="col-10 md-6 lg-4 mb-3 justify-conten-center input-group my-3" >
+                <div class="col-10 md-6 lg-8 mb-3 justify-conten-center input-group my-3" >
                   
                     <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Nombre usuario">
                 </div>
-            <div class="col-10 md-6 lg-4 mb-3 justify-conten-center input-group my-3">
+            <div class="col-10 md-6 lg-8 mb-3 justify-conten-center input-group my-3">
                
                 <input type="password"  name="password" class="form-control" id="autoSizingInputGroup" placeholder="elegir tu contraseña  " >
             </div>   
             <label class="visually-hidden" for="autoSizingInputGroup"></label>
 
-            <div class="col-12 md-6 lg-4  d-grid gap-2 my-3 ">
-                <button class="btn btn-primary" type="button" href="/" >
-                    Enviar <span class=" btn btn-primary  badge bg-secondary"></span></button>
-               
+            <div class="col-12 md-6 lg-4  d-grid gap-2 my-3 ml-8 ">
+                <button class="  btn btn-primary justify-conten-center " type="button" >
+                    <a href="/"><span  href="/"  class=" btn btn-primary ">Enviar</span></a></button>
+              
               </div>
            
         </from>
