modifique formulario de login y termine el registro

--- a/views/login.html
+++ b/views/login.html
@@ -50,21 +50,30 @@
     </header>
     <img class="banner" src="/img/img-home-banner.jpg" alt="">
     <main class="main-productos">
-        <div class="row " >  
+        <div class="row  " >  
         <from action="/login">
-            <div class="input-group col-10 md-6 lg-4 mb-3 ">
-                <div class="col-10 md-6 lg-4 mb-3 justify-conten-center input-group my-3" >
-                  
-                    <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Nombre usuario">
+            <div class="col-12 col-md-10 col-lg-10 mb-2 p-3">
+                <div class="input-group">
+                <label class="visually-hidden" for="autoSizingInputGroup">Nombre usuario</label>
+                <div class="input-group-text ">😉</div>
+                <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Nombre usuario">
                 </div>
-            <div class="col-10 md-6 lg-4 mb-3 justify-conten-center input-group my-3">
-               
-                <input type="password"  name="password" class="form-control" id="autoSizingInputGroup" placeholder="elegir tu contraseña  " >
-            </div>   
-            <label class="visually-hidden" for="autoSizingInputGroup"></label>
+            </div>
 
-            <div class="col-12 md-6 lg-4  d-grid gap-2 my-3 ">
-               <a href="/"><button class="btn btn-primary" type="button" >Enviar </button><span class=" btn btn-primary  badge bg-secondary"></span></a>
+     
+            <div class="col-12 col-md-10 col-lg-10 mb-2 aling-itemscenter">
+                <div class="input-group">
+
+                    <label class="visually-hidden" for="autoSizingInputGroup">email</label>
+                    <div class="input-group-text ">@</div>
+                    <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="email">
+                </div>
+            </div>
+
+            <div class="button md-8 lg-8 d-grid gap-2 d-md-flex justify-content-md-center">
+
+                <button class="button flex diretion-end btn btn-primary " type="submit" name="Enviar"
+                    href="/">Enviar</button>
                
               </div>
            
