--- a/public/css/general.css
+++ b/public/css/general.css
@@ -12,6 +12,9 @@
     font-family: 'Roboto';
     text-decoration: none;
     list-style: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 } 
    
 
