--- a/public/css/home.css
+++ b/public/css/home.css
@@ -125,7 +125,8 @@ flex-direction: row;
     display: flex;
     flex-direction: row;
     align-content: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    gap: 10px;
 }
 .articulos{
 
